login controller added and some minor changes

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=7200
-Signature:ajdhsjfhdsw364858absdhs#$$#$3$^%Z^%^$%$%$^Z&^S^&ASR^RZFVAASVGVSVAS
+Signature="ajdhsjfhdsw364858absdhs#$$#$3$^%Z^%^$%$%$^Z&^S^&ASR^RZFVAASVGVSVAS"
+
+MONGO_URL=mongodb+srv://lifestream:lifestream2589@cluster0.dpkiini.mongodb.net/lifestream
