new changes doneand twillo intregated for sms notification

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=7200
 Signature="ajdhsjfhdsw364858absdhs#$$#$3$^%Z^%^$%$%$^Z&^S^&ASR^RZFVAASVGVSVAS"
 
 MONGO_URL=mongodb+srv://lifestream:lifestream2589@cluster0.dpkiini.mongodb.net/lifestream
+
+accountSid = 'AC67939058e34ff3f3d28f6e89dc4c34b4'
+ authToken = 'd58842dd2ee226929b61dc77a6570b50'
