--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ MONGO_URL=mongodb+srv://lifestream:lifestream2589@cluster0.dpkiini.mongodb.net/l
 accountSid = 'AC67939058e34ff3f3d28f6e89dc4c34b4'
  authToken = 'd58842dd2ee226929b61dc77a6570b50'
 
- GMAIL_USER='www.dineshtmg1122@gmail.com'
+ GMAIL_USER='lifestream612@gmail.com'
  GMAIL_PASS='zwvykaynkkuyuxon'
