--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "redis": "^4.7.0",
     "twilio": "^5.2.2"
+  },
+  "scripts":{
+    "dev":"nodemon server.js"
   }
+
+  
 }
