--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ Signature="ajdhsjfhdsw364858absdhs#$$#$3$^%Z^%^$%$%$^Z&^S^&ASR^RZFVAASVGVSVAS"
 MONGO_URL=mongodb+srv://lifestream:lifestream2589@cluster0.dpkiini.mongodb.net/lifestream
 
 
-
+REDIS_URL=redis://default:i7EPM4ewu8zkTMyOztlby1VJmpo7KPqJ@redis-19273.c253.us-central1-1.gce.redns.redis-cloud.com:19273
  GMAIL_USER='lifestream612@gmail.com'
  GMAIL_PASS='zkudgykixbibdoxa'
